[project]
name = "ll"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
python_files = ["**/__tests__/*.py"]

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = false
ignore = ["src/ll/submitit/*"]

[tool.ruff.lint]
ignore = ["F722", "F821", "E741"]
